[tool.poetry]
name = "mxlrc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
lrc = "mxlrc:run_cli"

[tool.poetry.dependencies]
python = "^3.8"
tinytag = "1.8.1"
rich = "^13.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
